--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Ignore all .config files in Node-RED data folder
+# nodered/data/.config*
 nodered/data/.config.runtime.json
 nodered/data/.config.runtime.json.backup
 brief.pdf
