node-red-contrib-azure-iot-device

--- a/nodered/data/.config.nodes.json
+++ b/nodered/data/.config.nodes.json
@@ -448,5 +448,24 @@
                 "file": "/data/node_modules/node-red-contrib-azure-iot-hub/azureiothub.js"
             }
         }
+    },
+    "node-red-contrib-azure-iot-device": {
+        "name": "node-red-contrib-azure-iot-device",
+        "version": "0.2.6",
+        "local": true,
+        "user": true,
+        "nodes": {
+            "AzureIoTDevice": {
+                "name": "AzureIoTDevice",
+                "types": [
+                    "azureiotdevice"
+                ],
+                "enabled": true,
+                "local": true,
+                "user": false,
+                "module": "node-red-contrib-azure-iot-device",
+                "file": "/data/node_modules/node-red-contrib-azure-iot-device/azureiotdevice/azureiotdevice.js"
+            }
+        }
     }
 }
