--- a/nodered/data/package.json
+++ b/nodered/data/package.json
@@ -4,6 +4,8 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "azure-iot-device": "^1.18.3",
+        "azure-iot-device-mqtt": "^1.16.3",
         "node-red-contrib-azure-iot-device": "^0.2.6",
         "node-red-contrib-azure-iot-hub": "^0.4.0"
     }
