--- a/Azure/app/package.json
+++ b/Azure/app/package.json
@@ -1,11 +1,14 @@
 {
     "name": "azure-node-app",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node server.js"
     },
     "dependencies": {
+        "azure-iothub": "^1.16.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.18.2"
     }
 }
