--- a/nodered/data/package.json
+++ b/nodered/data/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "azure-iot-device": "^1.18.3",
         "azure-iot-device-mqtt": "^1.16.3",
+        "dotenv": "^17.2.3",
         "node-red-contrib-azure-iot-device": "^0.2.6",
         "node-red-contrib-azure-iot-hub": "^0.4.0"
     }
