--- a/Azure/app/Dockerfile
+++ b/Azure/app/Dockerfile
@@ -4,7 +4,7 @@ FROM node:18-alpine
 WORKDIR /usr/src/app
 
 COPY package.json .
-RUN npm install --production
+RUN npm install
 COPY . .
 
 EXPOSE 8080
