--- a/Edge/nodered/data/package.json
+++ b/Edge/nodered/data/package.json
@@ -7,6 +7,7 @@
         "azure-iot-device": "^1.18.3",
         "azure-iot-device-mqtt": "^1.16.3",
         "dotenv": "^17.2.3",
+        "express": "^5.1.0",
         "node-red-contrib-azure-iot-device": "^0.2.6",
         "node-red-contrib-azure-iot-hub": "^0.4.0"
     }
