Dockerfile for debug and prod

--- a/Edge/docker-compose.yml
+++ b/Edge/docker-compose.yml
@@ -16,6 +16,7 @@ services:
   edge-server:
     container_name: edge-server
     build: ./server
+    target: debug #or prod
     ports:
       - "8081:8080"
     environment:
