--- a/Edge/docker-compose.yml
+++ b/Edge/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - ./server/.env
     volumes:
       - ./server:/usr/src/app
+      - ./nodered/data/certificates:/usr/src/app/certificates
     depends_on:
       - nodered
       - redis
