--- a/Edge/server/package.json
+++ b/Edge/server/package.json
@@ -10,6 +10,7 @@
         "azure-iot-device-mqtt": "^1.16.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "mqtt": "^5.14.1",
         "nodemon": "^3.1.11"
     }
 }
