connected redis to the edge server

--- a/Edge/docker-compose.yml
+++ b/Edge/docker-compose.yml
@@ -58,7 +58,8 @@ services:
     networks:
       - sce-net-edge
     volumes:
-      - redis-data:/data
+      # - redis-data:/data
+      - /data
       
 
 networks:
