--- a/Edge/server/package.json
+++ b/Edge/server/package.json
@@ -11,6 +11,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mqtt": "^5.14.1",
-        "nodemon": "^3.1.11"
+        "nodemon": "^3.1.11",
+        "redis": "^5.10.0"
     }
 }
