--- a/Edge/server/package.json
+++ b/Edge/server/package.json
@@ -6,6 +6,7 @@
         "start": "node main.js"
     },
     "dependencies": {
+        "@redis/time-series": "^5.10.0",
         "azure-iot-device": "^1.16.0",
         "azure-iot-device-mqtt": "^1.16.0",
         "dotenv": "^16.3.1",
