--- a/Azure/app/docker-compose.yaml
+++ b/Azure/app/docker-compose.yaml
@@ -2,7 +2,9 @@ version: '3.8'
 services:
   app:
     container_name: app
-    build: .
+    build:
+      context: .
+      target: debug
     ports:
       - "8080:8080"
     env_file:
