--- a/Azure/app/package.json
+++ b/Azure/app/package.json
@@ -12,6 +12,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongodb": "^7.0.0",
+        "nodemon": "^3.1.11",
         "redis": "^5.10.0"
     }
 }
