--- a/Edge/docker-compose.yml
+++ b/Edge/docker-compose.yml
@@ -58,8 +58,8 @@ services:
     networks:
       - sce-net-edge
     volumes:
-      # - redis-data:/data
-      - /data
+      - redis-data:/data2
+      # - /data
       
 
 networks:
