fixed a redis persistence issue

--- a/Edge/docker-compose.yml
+++ b/Edge/docker-compose.yml
@@ -55,10 +55,12 @@ services:
       - "6379:6379"
     environment:
       - TZ=Europe/London
+      - REDIS_SAVE=900 1 150 10 60 10000
+      - REDIS_APPENDONLY=yes
     networks:
       - sce-net-edge
     volumes:
-      - redis-data:/data2
+      - redis-data:/data
       # - /data
       
 
