--- a/Azure/app/docker-compose.yaml
+++ b/Azure/app/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
       - redis-data-cloud:/data
     environment:
       - TZ=Europe/London
+      - REDIS_SAVE=900 1 150 10 60 10000
+      - REDIS_APPENDONLY=yes
     networks:
       - sce-net-cloud
 
