--- a/Edge/docker-compose.yml
+++ b/Edge/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       - "6379:6379"
     environment:
       - TZ=Europe/London
-      - REDIS_SAVE=900 1 150 10 60 10000
+      - REDIS_SAVE=30 1
       - REDIS_APPENDONLY=yes
     networks:
       - sce-net-edge
