--- a/Azure/app/docker-compose.yaml
+++ b/Azure/app/docker-compose.yaml
@@ -19,17 +19,21 @@ services:
       - sce-net-cloud
   redis:
     container_name: redis-cloud
-    image: redis/redis-stack:latest
+    image: redis/redis-stack-server:latest
     ports:
       - "6380:6379"
     volumes:
-      - redis-data-cloud:/data
+      - redis-data-cloud:/var/lib/redis-stack
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+      # - /var/lib/redis-stack
     environment:
       - TZ=Europe/London
-      - REDIS_SAVE=30 1
-      - REDIS_APPENDONLY=yes
+      # - REDIS_SAVE=900 1 100 10 60 10000
+      # - REDIS_APPENDONLY=yes
     networks:
       - sce-net-cloud
+    command: redis-stack-server /usr/local/etc/redis/redis.conf
+    
 
 networks:
   sce-net-cloud:
