--- a/Azure/docker-compose.yaml
+++ b/Azure/docker-compose.yaml
@@ -32,10 +32,26 @@ services:
       - sce-net-cloud
     command: redis-stack-server /usr/local/etc/redis/redis.conf
     
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - TZ=Europe/London
+    depends_on:
+      - redis
+    networks:
+      - sce-net-cloud
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
 
+      
 networks:
   sce-net-cloud:
     driver: bridge
 
 volumes:
   redis-data-cloud:
+  grafana-data:
