--- a/Edge/docker-compose.yml
+++ b/Edge/docker-compose.yml
@@ -70,11 +70,11 @@ services:
     container_name: grafana-edge
     ports:
       - "3002:3000"
+    env_file:
+      - ./server/.env
     environment:
       - TZ=Europe/London
       - GF_INSTALL_PLUGINS=redis-app
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=3t5h0pQz
     depends_on:
       - redis
     networks:
