--- a/Azure/docker-compose.yaml
+++ b/Azure/docker-compose.yaml
@@ -13,27 +13,25 @@ services:
       - ./app:/usr/src/app
     environment:
       - TZ=Europe/London
-    depends_on:
-      - redis
+    # depends_on:
+    #   - redis
     networks:
       - sce-net-cloud
-  redis:
-    container_name: redis-cloud
-    image: redis/redis-stack-server:latest
-    ports:
-      - "6380:6379"
-    volumes:
-      # - redis-data-cloud:/var/lib/redis-stack
-      - ./redis:/var/lib/redis-stack
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
-    environment:
-      - TZ=Europe/London
-    networks:
-      - sce-net-cloud
-    command: redis-stack-server /usr/local/etc/redis/redis.conf
+  # redis:
+  #   container_name: redis-cloud
+  #   image: redis/redis-stack-server:latest
+  #   ports:
+  #     - "6380:6379"
+  #   volumes:
+  #     # - redis-data-cloud:/var/lib/redis-stack
+  #     - ./redis:/var/lib/redis-stack
+  #     - ./redis.conf:/usr/local/etc/redis/redis.conf
+  #   environment:
+  #     - TZ=Europe/London
+  #   networks:
+  #     - sce-net-cloud
+  #   command: redis-stack-server /usr/local/etc/redis/redis.conf
 
-
-      
 networks:
   sce-net-cloud:
     driver: bridge
