--- a/Azure/app/package.json
+++ b/Azure/app/package.json
@@ -9,6 +9,7 @@
         "@redis/time-series": "^5.10.0",
         "azure-iothub": "^1.16.6",
         "cors": "^2.8.5",
+        "dayjs": "^1.11.19",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongodb": "^7.0.0",
