--- a/Azure/app/package.json
+++ b/Azure/app/package.json
@@ -12,6 +12,8 @@
         "dayjs": "^1.11.19",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.3",
+        "jwks-rsa": "^3.2.0",
         "mongodb": "^7.0.0",
         "nodemon": "^3.1.11",
         "redis": "^5.10.0"
