--- a/Edge/docker-compose.yml
+++ b/Edge/docker-compose.yml
@@ -66,7 +66,8 @@ services:
     command: redis-stack-server /usr/local/etc/redis/redis.conf
 
   grafana:
-    image: grafana/grafana:latest
+    # image: grafana/grafana:latest
+    image: grafana/grafana-dev:12.4.0-21003774845-ubuntu
     container_name: grafana-edge
     ports:
       - "3002:3000"
@@ -81,8 +82,10 @@ services:
       - sce-net-edge
     volumes:
       - grafana-data:/var/lib/grafana
+      # - ./grafana/provisioning:/etc/grafana/provisioning
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/alerting:/etc/grafana/provisioning/alerting
       
 
 networks:
